--- a/packages/element-ui/package.json
+++ b/packages/element-ui/package.json
@@ -19,6 +19,7 @@
         "clean": "rimraf dist/",
         "dev": "vue-cli-service serve",
         "build": "vite build --config ./vite.config.build.js",
+        "build:cola": "vite build --config ./vite.config.cola.js",
         "build:locale": "gulp -f gulpfile.js",
         "build:preview": "vite build --config ./vite.config.preview.js"
     },
@@ -71,7 +72,9 @@
         "jsonlint-mod": "^1.7.6",
         "lint-staged": "^10.2.11",
         "rimraf": "^3.0.2",
-        "vite": "^3.1.4"
+        "rollup-plugin-copy": "^3.5.0",
+        "vite": "^3.1.4",
+        "vite-plugin-singlefile": "^2.0.2"
     },
     "husky": {
         "hooks": {
@@ -93,6 +96,7 @@
         "@form-create/utils": "^3.2.0",
         "codemirror": "^6.65.7",
         "element-plus": "^2.8.4",
+        "events": "^3.3.0",
         "vuedraggable": "4.1.0"
     }
 }
